Add image, description, ingredients, and steps to salmon recipe

--- a/recipes/firecracker-salmon.html
+++ b/recipes/firecracker-salmon.html
@@ -7,6 +7,29 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Firecracker Salmon</h1>
+    <h1>Firecracker Salmon</h1> <br>
+    <img src="salmon.webp" alt="A piece of cooked salmon on a bed of rice with sliced jalapenos on top">
+    <h2>Description</h2>
+    <p>This salmon gets marinated in a maple and jalapeno sauce, then gets topped with additional maple syrup during baking, for a perfect spicy-sweet marriage of flavors. This only has a hint of heat, so double the jalapeno if desired. Use center-cut salmon fillets that are approximately 1 inch thick.</p>
+<h3>Ingredients</h3>
+    <ul>
+        <li>1/4 cup maple syrup</li>
+        <li>1 medium jalapeno, cut in half width-wise</li>
+        <li>1 clove garlic, minced</li>
+        <li>1 tablespoon rice wine vinegar</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/8 teaspoon black pepper</li>
+        <li>2 (6 oz) salmon fillets</li>
+        <li>salt and pepper to taste</li>
+        <li>2 teaspoons maple syrup</li>
+    </ul>
+<h3>Steps</h3>
+    <ol>
+        <li>Combine 1/4 cup maple syrup, 1/2 of the jalapeno pepper, garlic, vinegar, salt, and black pepper in a mini food processor or small blender jar; blend until smooth.</li>
+        <li>Place salmon fillets in a gallon-sized resealable plastic bag. Pour marinade on top, seal, and refrigerate for 20 minutes. Remove from refrigerator and let the bag sit at room temperature for 10 minutes.</li>
+        <li>Preheat the oven to 425 degrees F (220 degrees C). Line a baking sheet with parchment paper.</li>
+        <li>Remove salmon from marinade and pat dry. Place salmon on the prepared baking sheet and season with additional salt and pepper. Slice remaining jalapeno pepper thinly and place on top of salmon.</li>
+        <li>Bake in the preheated oven for 10 minutes. Brush 2 teaspoons maple syrup onto the fillets and return to the hot oven. Bake until fish flakes easily with a fork, an additional 3 to 5 minutes.</li>
+    </ol>
 </body>
 </html>
