--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/firecracker-salmon.html">Firecracker Salmon</a>
+        <ul>
+            <li><a href="recipes/firecracker-salmon.html">Firecracker Salmon</a></li>
+            <li><a href="recipes/indian-chicken-curry.html">Indian Chicken Curry (Murgh Kari)</a></li>
     </body>
 </html>
