Add chocolate chip cookies recipe

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <ul>
             <li><a href="recipes/firecracker-salmon.html">Firecracker Salmon</a></li>
             <li><a href="recipes/indian-chicken-curry.html">Indian Chicken Curry (Murgh Kari)</a></li>
+            <li><a href="recipes/cookies.html">Chocolate Chip Cookies</a></li>
     </body>
 </html>
