Add style.css, change color of h1 and size of imgs

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chocolate Chip Cookies</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Chocolate Chip Cookies</h1>
-    <img src="cookies.webp" alt="The most delicous chocolate chip cookies you've ever seen">
+    <img class="pic" src="cookies.png" alt="The most delicous chocolate chip cookies you've ever seen">
     <h2>Description</h2>
         <p>These chewy chocolate chip cookies are the pinnacle of perfection! If you want a big, fat, soft, and chewy cookie like the kind you see at bakeries and specialty shops, then this is the recipe for you!</p>
     <h3>Ingredients</h3>
