--- a/recipes/indian-chicken-curry.html
+++ b/recipes/indian-chicken-curry.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indian Chicken Curry</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Indian Chicken Curry (Murgh Kari)</h1>
-    <img src="curry.webp" alt="A bowl of chicken curry">
+    <img class="pic" src="curry.webp" alt="A bowl of chicken curry">
     <h2>Description</h2>
         <p>Enjoy the lavishly delicious taste of chicken curry at home with this easy-to-follow recipe. Bold spices like ginger, cumin, and curry powder add rich layers of flavor to succulent chicken coated in a creamy tomato-based sauce. Fill your kitchen with the delightful fragrance of a creamy, spicy, and filling curry that the whole family will love.</p>
     <h3>Ingredients</h3>
