--- a/recipes/firecracker-salmon.html
+++ b/recipes/firecracker-salmon.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firecracker Salmon</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Firecracker Salmon</h1> <br>
-    <img src="salmon.webp" alt="A piece of cooked salmon on a bed of rice with sliced jalapenos on top">
+    <img class="pic" src="salmon.webp" alt="A piece of cooked salmon on a bed of rice with sliced jalapenos on top">
     <h2>Description</h2>
     <p>This salmon gets marinated in a maple and jalapeno sauce, then gets topped with additional maple syrup during baking, for a perfect spicy-sweet marriage of flavors. This only has a hint of heat, so double the jalapeno if desired. Use center-cut salmon fillets that are approximately 1 inch thick.</p>
 <h3>Ingredients</h3>
